--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,6 +1,11 @@
 # Rename this file to languages.toml to enable multilingual support
+[fa]
+languageName = "فارسی"
+languagedirection = "rtl"
+title = "مورفیس"
+weight = 1
 [en]
 languageName = "English"
 languagedirection = "ltr"
-title = "Example Site"
-weight = 1
+title = "morface"
+weight = 2
