--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -20,5 +20,10 @@ identifier = "twitter"
 name = "Twitter"
 url = "https://twitter.com"
 
+#[[social]]
+#identifier = "facebook"
+#name = "Face Book"
+#url = "https://twitter.com"
+
 [social.params]
 icon = "brand-twitter"
